# apartment-bills-manager

./: CMakeLists.txt  main.cpp
Domain/: Apartment.cpp  Apartment.h  ApartmentBill.cpp  ApartmentBill.h  Entity.cpp  Entity.h  Vector.cpp  Vector.h
Repository/: Repository.cpp  Repository.h
Service/: Service.cpp  Service.h
Tests/: Test.cpp  Test.h
UserInterface/: Console.cpp  Console.h
